# appweb2-win

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildConfig.h
http/: CMakeLists.txt  configFile.cpp  http.cpp  request.cpp
http/modules/: espHandler.cpp  uploadHandler.cpp
mpr/: CMakeLists.txt  mpr.h  mprOs.h  socket.cpp  var.h
simpleServer/: CMakeLists.txt  clientHandler.cpp  clientHandler.h  index.html  simpleServer.conf  simpleServer.cpp
